feat: Support for USB input controllers in the carousel preview
-Launches the preview in fullscreen mode on a secondary screen if available.
-Adds VICE preferences for input controllers and launch in windowed or fullscreen mode.